fixed issue on collapse button (sidemen)

--- a/app/src/app/dashboards/widgets/widget.tmpl.scss
+++ b/app/src/app/dashboards/widgets/widget.tmpl.scss
@@ -50,9 +50,11 @@
         left: 0;
         top: 0;
         background: linear-gradient(to bottom, rgba(0,0,0,0.55) 0%,rgba(0,0,0,0) 100%);
+        align-items: flex-start;
         &[flex-order="2"] {
           top: auto;
           bottom: 0;
+          align-items: flex-end;
           background: linear-gradient(to top, rgba(0,0,0,0.55) 0%,rgba(0,0,0,0) 100%);
         }
       }
