--- a/app/src/components/side-menu/side-menu.scss
+++ b/app/src/components/side-menu/side-menu.scss
@@ -21,17 +21,10 @@ side-menu {
 
 // Side menu shrink/grow icon
 .sidebar-left-icon {
-  text-align: right;
-  margin-right: 0 !important;
   display: none;
   md-icon {
     transform: rotate(90deg);
     transition: all .2s;
-  }
-  &:hover {
-    md-icon {
-      transform: rotate(-90deg);
-    }
   }
   .md-locked-open & {
     display: block;
